--- a/plugins/mootes14/login.html
+++ b/plugins/mootes14/login.html
@@ -2,7 +2,7 @@
 <form action="" novalidate>
     <div id="login-details">
 
-            <input type="hidden" id="url" value="http://2014.moodlemoot.net">
+            <input type="hidden" id="url" value="http://www.aulavirtual.fayd.unam.edu.ar">
             <p>
                 <input type="text" id="username" autocapitalize="off" autocorrect="off" placeholder="<%= MM.lang.s("username") %>">
             </p>
